Swagger documentation completed
