# app/Http/Controllers/CommentController.php
@@ -15,40 +15,38 @@ class CommentController extends BaseController
      * @param StoreComment $request
      * @param User $user
      * @return \Illuminate\Http\JsonResponse
-     *
-     * * @OA\Post(
+
+     * @OA\Post(
      *     path="/comment",
      *     tags={"comment"},
-     *     summary="Append user comment",
-     *      @OA\Parameter(
-     *     name="id",
-     *     description="user id",
-     *      required=true,
-     *     in="query",
-     *     @OA\Schema(
-     *     type="integer"
-     * ),
+     *     summary="Appends user comment",
      *     @OA\Parameter(
-     *     name="password",
-     *     description="user password",
-     *     required=true,
-     *     in="query",
-     *     @OA\Schema(
-     *     type="string"
-     * ),
+     *         name="id",
+     *         in="query",
+     *         description="User id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
      *     @OA\Parameter(
-     *     name="comments",
-     *     description="User comment",
-     *     required=true,
-     *     in="query",
-     *     @OA\Schema(
-     *     type="string"
-     * )
-     * )
-     * )
-     * ),
-     *     @OA\Response(response="200", description="Comment successfully appended"),
-     *      @OA\Response(response="422", description="Unprocessed entity. (validation errors)")
+     *         name="password",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *       @OA\Parameter(
+     *         name="comments",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *  @OA\Response(response="200", description="Comment successfully appended"),
+     *   @OA\Response(response="422", description="Unprocessed entity. (validation errors)")
      * )
      */
 
